# plp-mini

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PROGRESS.md  MANUAL_TESTING_GUIDE.md  PYTHON_SETUP_FIX.md  QUICKSTART.md  test_endpoints.py  verify_implementation.sh
backend/: .env.example  .flake8  alembic.ini  mypy.ini  pyproject.toml  requirements.txt  test_runner.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250919_1200_001_initial_tables.py
backend/scripts/: seed_data.py
backend/src/: database.py  init_db.py  main.py  settings.py  test.db
backend/src/api/: dashboard.py  employees.py  time_entries.py  upload.py
backend/src/models/: __init__.py  base.py  department.py  employee.py  time_entry.py  user.py
backend/src/repositories/: base_repository.py  department_repository.py  employee_repository.py  time_entry_repository.py  user_repository.py
backend/src/services/: dashboard_service.py  department_service.py  employee_service.py  local_job_service.py  local_notification_service.py  local_storage_service.py  search_service.py  time_entry_service.py  upload_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_employee_delete.py  test_employee_get.py  test_employee_list.py  test_employee_post.py  test_employee_put.py  test_employee_search.py  test_timeentry_delete.py  test_timeentry_get.py  test_timeentry_list.py  test_timeentry_post.py  test_timeentry_put.py  test_timeentry_summary.py
frontend/: .eslintrc.json  angular.json  package.json
infrastructure/: docker-compose.yml
(+15 files in other folders)
